# streamtrace

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  docker-compose.yml
.cargo/: audit.toml
.github/workflows/: ci.yml  security.yml
config/: default.toml  development.toml
crates/st-api/: Cargo.toml
crates/st-api/src/: auth.rs  error.rs  lib.rs  middleware.rs  router.rs  state.rs
crates/st-api/src/handlers/: audit.rs  bundles.rs  cases.rs  correlate.rs  entities.rs  events.rs  health.rs  holds.rs  ingest.rs  keys.rs  mod.rs  replay.rs  search.rs  sequences.rs  timeline.rs
crates/st-cases/: Cargo.toml
crates/st-cases/src/: bundle.rs  case.rs  export.rs  lib.rs
crates/st-common/: Cargo.toml
crates/st-common/src/: config.rs  error.rs  event.rs  lib.rs  types.rs  validation.rs
crates/st-correlate/: Cargo.toml
crates/st-correlate/src/: entities.rs  keys.rs  lib.rs  linker.rs  sequences.rs
crates/st-crypto/: Cargo.toml
crates/st-crypto/src/: hash.rs  lib.rs  sign.rs  verify.rs
crates/st-index/: Cargo.toml
crates/st-index/src/: filters.rs  lib.rs  search.rs  timeline.rs
crates/st-ingest/: Cargo.toml
crates/st-ingest/src/: handler.rs  lib.rs  pipeline.rs  types.rs  validation.rs
crates/st-parser/: Cargo.toml  PARSERS.md
crates/st-parser/src/: csv_generic.rs  json_generic.rs  lib.rs  registry.rs  syslog.rs  template.rs  traits.rs
crates/st-server/: Cargo.toml
crates/st-server/src/: main.rs
crates/st-store/: Cargo.toml
crates/st-store/src/: api_keys.rs  audit.rs  cases.rs  correlation_keys.rs  entities.rs  events.rs  holds.rs  lib.rs  raw_events.rs  sequences.rs
docker/: Dockerfile.api  Dockerfile.ui  nginx.conf
docker/timescaledb/: init.sql
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.tsx
frontend/src/api/: audit.ts  cases.ts  client.ts  entities.ts  events.ts  holds.ts  sequences.ts  types.ts
frontend/src/components/Audit/: AuditLog.tsx
frontend/src/components/Cases/: CaseDetail.tsx  CaseList.tsx
frontend/src/components/Entities/: EntityDetail.tsx  EntityGraph.tsx  EntityList.tsx
frontend/src/components/EventDetail/: EventDetail.tsx
frontend/src/components/Holds/: HoldList.tsx
frontend/src/components/Layout/: Header.tsx  Shell.tsx  Sidebar.tsx
frontend/src/components/Replay/: ReplayControls.tsx
frontend/src/components/Search/: SearchBar.tsx
frontend/src/components/Sequences/: SequenceList.tsx
frontend/src/components/Timeline/: Timeline.tsx  TimelineControls.tsx  TimelineEvent.tsx
frontend/src/stores/: cases.ts  entities.ts  timeline.ts
frontend/src/styles/: global.css
migrations/: 00001_create_extensions.sql  00002_create_raw_events.sql  00003_create_events.sql  00004_create_correlation_keys.sql  00005_create_cases.sql  00006_create_case_events.sql  00007_create_api_keys.sql  00008_create_audit_log.sql  00009_create_entities.sql  00010_create_entity_relationships.sql  00011_create_entity_events.sql  00012_create_sequence_patterns.sql  00013_create_detected_sequences.sql  00014_create_legal_holds.sql  00015_create_hold_events.sql
