[workspace]
resolver = "2"
members = [
    "crates/st-common",
    "crates/st-crypto",
    "crates/st-store",
    "crates/st-parser",
    "crates/st-ingest",
    "crates/st-index",
    "crates/st-correlate",
    "crates/st-cases",
    "crates/st-api",
    "crates/st-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/geeknik/streamtrace"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.8"
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "request-id", "limit"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Encoding
base64 = "0.22"

# Types
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }

# Crypto
blake3 = "1"
sha2 = "0.10"
argon2 = "0.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
subtle = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
config = "0.14"
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Testing
proptest = "1"
