[package]
name = "st-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
st-common = { path = "../st-common" }
st-store = { path = "../st-store" }
st-crypto = { path = "../st-crypto" }
st-ingest = { path = "../st-ingest" }
st-index = { path = "../st-index" }
st-cases = { path = "../st-cases" }
st-parser = { path = "../st-parser" }
st-correlate = { path = "../st-correlate" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
async-stream = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
argon2 = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
http-body-util = "0.1"
