[package]
name = "st-cases"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
st-common = { path = "../st-common" }
st-store = { path = "../st-store" }
st-crypto = { path = "../st-crypto" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
hex = "0.4"
sqlx = { workspace = true }
