[package]
name = "st-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
hex = "0.4"
ed25519-dalek = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
