[package]
name = "st-parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
st-common = { path = "../st-common" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
csv = "1"

[dev-dependencies]
proptest = { workspace = true }
