[package]
name = "st-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
st-common = { path = "../st-common" }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
argon2 = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }
